<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/profile_background_color"
    android:orientation="vertical" >

    <Button
        android:id="@+id/btn_notice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/account_edit_bar_2"
        android:gravity="left|center_vertical"
        android:text="@string/setting_notice"
        android:textColor="@color/white_color" />

    <Button
        android:id="@+id/btn_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/account_edit_bar_2"
        android:gravity="left|center_vertical"
        android:text="@string/setting_account"
        android:textColor="@color/white_color" />

    <Button
        android:id="@+id/btn_version"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/account_edit_bar_2"
        android:gravity="left|center_vertical"
        android:text="@string/setting_version"
        android:textColor="@color/white_color" />

    <Button
        android:id="@+id/btn_logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/account_edit_bar_2"
        android:gravity="left|center_vertical"
        android:text="@string/logout"
        android:textColor="@color/white_color" />

</LinearLayout>
