<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/selectView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_background_color"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/forgot_passView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_sign_login"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="64dp"
        android:text="@string/pass_search"
        android:textColor="@color/white_color"
        android:textStyle="bold"
        android:visibility="gone" />

    <EditText
        android:id="@+id/pass_edit_text"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignLeft="@+id/email_edit_text"
        android:layout_alignRight="@+id/email_edit_text"
        android:layout_below="@+id/email_edit_text"
        android:layout_marginTop="4dp"
        android:background="@drawable/rectangle_edit_text"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingLeft="18dp"
        android:textColor="@color/white_color" />

    <Button
        android:id="@+id/btn_sign_login"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_alignLeft="@+id/pass_edit_text"
        android:layout_alignRight="@+id/email_edit_text"
        android:layout_below="@+id/pass_edit_text"
        android:layout_marginTop="32dp"
        android:background="@drawable/rectangle_btn"
        android:text="@string/sign_in"
        android:textColor="@color/white_color" />

    <EditText
        android:id="@+id/email_edit_text"
        android:layout_width="232dp"
        android:layout_height="45dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/sign_in_backView"
        android:layout_marginLeft="64dp"
        android:layout_marginTop="62dp"
        android:background="@drawable/rectangle_edit_text"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingLeft="18dp"
        android:textColor="@color/white_color" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/sign_in_titleView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="11dp"
        android:text="@string/sign_in_title"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/white_color" />

    <ImageButton
        android:id="@+id/sign_in_backView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="@android:color/transparent"
        android:src="@drawable/btn_back" />

</RelativeLayout>
