<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_background_color"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/tv_personal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="64dp"
        android:layout_marginTop="36dp"
        android:text="@string/profile_edit_email"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/white_color"
        android:textSize="12sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="64dp"
        android:layout_marginRight="64dp"
        android:layout_marginTop="16dp" >

        <EditText
            android:id="@+id/oldpassEditView"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@drawable/edit_text_profile"
            android:ems="10"
            android:hint="@string/email"
            android:paddingLeft="16dp"
            android:textColor="@color/white_color" >

            <requestFocus />
        </EditText>

    </RelativeLayout>

    <Button
        android:id="@+id/btn_pass_modify_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="64dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/btn"
        android:text="@string/ok"
        android:textColor="@color/white_color" />

</LinearLayout>
