<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_background_color" >

    <ImageButton
        android:id="@+id/btn_menu_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="9dp"
        android:layout_marginTop="13dp"
        android:background="@android:color/transparent"
        android:src="@drawable/btn_back" />

    <TextView
        android:id="@+id/sign_in_forgot_titleView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="13dp"
        android:text="@string/sign_in_forget_title"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/white_color" />

    <TextView
        android:id="@+id/sign_in_forgot_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_menu_search"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="53dp"
        android:gravity="center"
        android:text="@string/sign_in_forget_desc"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/white_color" />

    <EditText
        android:id="@+id/comment_editText"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_alignLeft="@+id/btn_comment_send"
        android:layout_alignRight="@+id/btn_comment_send"
        android:layout_below="@+id/sign_in_forgot_desc"
        android:layout_marginTop="24dp"
        android:background="@drawable/rectangle_edit_text"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingLeft="18dp"
        android:textColor="@color/white_color" />

    <Button
        android:id="@+id/btn_comment_send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/comment_editText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:background="@drawable/btn"
        android:text="@string/sign_in_forget_send"
        android:textColor="@color/white_color" />

</RelativeLayout>
