<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/career_titleView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/career_add"
            android:textAppearance="?android:attr/textAppearanceLarge" />

    </LinearLayout>

    <ImageView
        android:id="@+id/message_in_userPictureView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/popup_div_1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:orientation="vertical"
        android:paddingLeft="18dp"
        android:paddingRight="18dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp" >

            <TextView
                android:id="@+id/proifle_edit_statusView"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/career_job"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/career_mainEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="14dp"
                android:layout_weight="1"
                android:ems="10"
                android:textSize="12sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp" >

            <TextView
                android:id="@+id/menu_like_count"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/career_position"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/career_subEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="14dp"
                android:layout_weight="1"
                android:ems="10"
                android:textSize="12sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp" >

            <TextView
                android:id="@+id/info_content"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/career_startdate"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/career_startDateView"
                android:layout_width="101dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="14dp"
                android:gravity="center"
                android:hint="@string/academic_date_hint"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/message_in_descView"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/career_enddate"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/career_endDateView"
                android:layout_width="101dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:hint="@string/academic_date_hint"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="12sp" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp" >

        <ImageButton
            android:id="@+id/career_verify"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_popup_confirm"
            android:layout_weight="1" />

        <ImageButton
            android:id="@+id/career_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_popup_cancel"
            android:layout_weight="1" />

    </LinearLayout>

</LinearLayout>
